# rospy-compat

./: AGENTS.md  ruff.toml  test_foxy.sh
ros_tutorials/: CHANGELOG.rst
roscpp_tutorials/: CHANGELOG.rst
rospy_compat/: README.md  package.xml  setup.cfg  setup.py
rospy_compat/rospy_compat/: __init__.py  actionlib.py  core.py  exceptions.py  logging.py  message_hooks.py  node.py  params.py  publishers.py  qos.py  rate.py  services.py  subscribers.py  time.py
rospy_too/: .coveragerc  README.md  package.xml  setup.cfg  setup.py
rospy_too/actionlib/: __init__.py  action_utils.py  goal_status.py  simple_action_client.py  simple_action_server.py
rospy_too/actionlib_msgs/: __init__.py
rospy_too/actionlib_msgs/msg/: __init__.py
rospy_too/rospy/: __init__.py  core.py  exceptions.py  logging.py  msg.py  names.py  params.py  rate.py  services.py  time.py  topics.py
rospy_too/rospy/genpy/: rostime.py
rospy_too/rospy/impl/: __init__.py  hooks.py  node.py  patches.py  pending.py  qos.py
rospy_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rospy_tutorials/001_talker_listener/: CHANGES.md  listener.py  talker.py  talker_timer.py
rospy_tutorials/002_headers/: CHANGES.md  listener_header.py  talker_header.py
rospy_tutorials/005_add_two_ints/: CHANGES.md  add_two_ints_client  add_two_ints_server
rospy_tutorials/006_parameters/: CHANGES.md  param_talker.py
rospy_tutorials/008_on_shutdown/: CHANGES.md  publish_on_shutdown.py
rospy_tutorials/test/: test_001_talker_listener.py  test_001b_talker_timer.py  test_002_header_messages.py  test_005_add_two_ints.py  test_006_parameters.py  test_008_on_shutdown.py
tests/: run.sh
tests/ros1_pkg/: CMakeLists.txt  package.xml
tests/ros2_pkg/: CMakeLists.txt  package.xml
tests/scripts/: run_all.py  test_actionlib.py  test_anymsg.py  test_import.py  test_logging.py  test_messages.py  test_mixed_usage.py  test_node.py  test_params.py  test_pubsub.py  test_services.py  test_shutdown.py  test_time.py  test_timer.py
turtlesim/: CHANGELOG.rst
