<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rospy_too</name>
  <version>1.0.0</version>
  <description>
    ROS 1 rospy compatibility layer for ROS 2.
    Allows unmodified ROS 1 Python nodes to run on ROS 2.
  </description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <depend>rosgraph_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
