<?xml version="1.0"?>
<package format="2">
  <name>rospy_too_tests</name>
  <version>1.0.0</version>
  <description>Test suite for rospy_too compatibility layer</description>
  <maintainer email="test@test.com">Test</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
</package>
